--- a/question2/public/index.html
+++ b/question2/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <div id='drawer-hook'></div>
     <div id='modal-hook'></div>
     <div id='backdrop-hook'></div>
     <div id="root"></div>
